--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="cabeçalho">
-                <span class="cabeçalho__Menu.svg container__imagem"></span>
+               <span class="cabeçalho__menu-hamburguer container__imagem"></span>
                 <img src="Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
                 <a href="#"><img src="Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
                 <a href="#"><img src="Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
